tests/errors/surf_name_08.ki
# name resolution: bare '=' assignment to a never-declared name (NameError)
score = 10
